--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>™ &copy; <a href="http://github.com/UnusualAndroid" target="_blank">Unusual Android</a> & <a href="http://github.com/TeamUnusual" target="_blank">Team Unusual</a>. All rights reserved.</li><li>2019,/li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</section>
